--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,8 @@
 }
 
 .wrapper {
-    margin: 10% 50% 10% 50%;
-    background-color: #282c34;
-
+    background-color: #dadada;
+    min-height: 100vh
 }
 
 .instock-checkbox {
@@ -30,7 +29,8 @@
 
 .router-navbar {
     width: 100%;
-    background-color: darkblue;
+    background-color: white;
+    color: #fff !important;
 }
 
 .router-list {
@@ -38,8 +38,8 @@
 }
 
 .router-list-item {
-    float: left;
     margin-right: 10px;
+    float: left;
 }
 
 .instock-span {
@@ -47,8 +47,7 @@
 }
 
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+    background-color: #dadada;
     display: flex;
     flex-direction: column;
     align-items: center;
